[ci skip] holidays does not have school data 4993a5fda119b3edd1c40b38fec289f769ce4c29

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "373b2774",
+   "id": "b4cf78a2",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f24141",
+   "id": "2ee5e668",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e06cde",
+   "id": "90c61e05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6a962f",
+   "id": "cd9d26ce",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62308e98",
+   "id": "28b38e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ab2d01",
+   "id": "787be474",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e827cb1d",
+   "id": "624b1670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dec861",
+   "id": "4f43d31f",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4de9189",
+   "id": "9a519877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8b03a0",
+   "id": "1195ede5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "178b2e14",
+   "id": "6bc959a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54812250",
+   "id": "39f173e3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a897b1",
+   "id": "beea743d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6cf2fe8",
+   "id": "14be8ef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7a08c6",
+   "id": "fa3b1a8d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -224,21 +224,21 @@
     "## Calendar and holidays features\n",
     "\n",
     "We leverage the `holidays` package to enrich the time range with some\n",
-    "calendar features such as public holidays and school holidays in France. We\n",
-    "also add some features that are useful for time series forecasting such as\n",
-    "the day of the week, the day of the year, and the hour of the day.\n",
+    "calendar features such as public holidays in France. We also add some\n",
+    "features that are useful for time series forecasting such as the day of the\n",
+    "week, the day of the year, and the hour of the day.\n",
     "\n",
     "Note that the `holidays` package requires us to extract the date for the\n",
     "French timezone.\n",
     "\n",
-    "Similarly for the calendar features: all the time features are extracted\n",
-    "from the time in the French timezone."
+    "Similarly for the calendar features: all the time features are extracted from\n",
+    "the time in the French timezone."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5beccd64",
+   "id": "8d95fa4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,12 +246,10 @@
     "\n",
     "holidays_fr = holidays.France(years=range(2019, 2026))\n",
     "\n",
-    "\n",
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
     "calendar = time.with_columns(\n",
     "    [\n",
     "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"is_holiday_fr\"),\n",
-    "        # TODO: add school holidays flags for the 3 main zones in France\n",
     "        fr_time.dt.weekday().alias(\"day_of_week_fr\"),\n",
     "        fr_time.dt.ordinal_day().alias(\"day_of_year_fr\"),\n",
     "        fr_time.dt.hour().alias(\"hour_of_day_fr\"),\n",
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b49bf4",
+   "id": "75d2eb53",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -276,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7931de",
+   "id": "499bab5b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -293,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd9f2e7",
+   "id": "c4b8f20e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58096533",
+   "id": "040b1ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "008d509d",
+   "id": "0a4c6f1c",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -347,12 +345,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4a2ce6",
+   "id": "68335098",
    "metadata": {},
    "outputs": [],
    "source": [
     "time.join(electricity, on=\"time\", how=\"left\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be15606f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
