--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d82f44b",
+   "id": "49f0a38c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36ec031",
+   "id": "dba9fa14",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5c3541",
+   "id": "26b2a122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b724aae",
+   "id": "a29282d2",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e541cb6",
+   "id": "a165609f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b519cc74",
+   "id": "b27b6a41",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed33acdf",
+   "id": "c9429231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d980b5",
+   "id": "96ee4807",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc62cfaa",
+   "id": "319b5ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59175399",
+   "id": "56eb1524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d3ae796",
+   "id": "6322832f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa15710",
+   "id": "6c96336f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74383c1c",
+   "id": "2fef701d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5018858",
+   "id": "0c18bb4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecec6570",
+   "id": "31551d3b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -224,21 +224,21 @@
     "## Calendar and holidays features\n",
     "\n",
     "We leverage the `holidays` package to enrich the time range with some\n",
-    "calendar features such as public holidays and school holidays in France. We\n",
-    "also add some features that are useful for time series forecasting such as\n",
-    "the day of the week, the day of the year, and the hour of the day.\n",
+    "calendar features such as public holidays in France. We also add some\n",
+    "features that are useful for time series forecasting such as the day of the\n",
+    "week, the day of the year, and the hour of the day.\n",
     "\n",
     "Note that the `holidays` package requires us to extract the date for the\n",
     "French timezone.\n",
     "\n",
-    "Similarly for the calendar features: all the time features are extracted\n",
-    "from the time in the French timezone."
+    "Similarly for the calendar features: all the time features are extracted from\n",
+    "the time in the French timezone."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "250b5a4e",
+   "id": "e1fdb9c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,12 +246,10 @@
     "\n",
     "holidays_fr = holidays.France(years=range(2019, 2026))\n",
     "\n",
-    "\n",
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
     "calendar = time.with_columns(\n",
     "    [\n",
     "        fr_time.dt.date().is_in(holidays_fr.keys()).alias(\"is_holiday_fr\"),\n",
-    "        # TODO: add school holidays flags for the 3 main zones in France\n",
     "        fr_time.dt.weekday().alias(\"day_of_week_fr\"),\n",
     "        fr_time.dt.ordinal_day().alias(\"day_of_year_fr\"),\n",
     "        fr_time.dt.hour().alias(\"hour_of_day_fr\"),\n",
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bf8b3f",
+   "id": "0c285055",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -276,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149ec104",
+   "id": "b0d44ac7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -293,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba99fce",
+   "id": "72311ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45f13822",
+   "id": "b7e7e37d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5802b73a",
+   "id": "c329c893",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -347,12 +345,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a24d23",
+   "id": "25fe7fc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "time.join(electricity, on=\"time\", how=\"left\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fcb72a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
