[ci skip] Filter out sub-hour load data adb7248c2fbc853477d438a74b31b476c1a079c8

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4cf78a2",
+   "id": "6dd12ecd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee5e668",
+   "id": "94810544",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c61e05",
+   "id": "500c6aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9d26ce",
+   "id": "c5b180ef",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b38e74",
+   "id": "9ffdfeca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787be474",
+   "id": "6d744e1d",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "624b1670",
+   "id": "7ce1aa3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f43d31f",
+   "id": "a87a92c4",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a519877",
+   "id": "ecb46583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1195ede5",
+   "id": "15c30f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc959a4",
+   "id": "081d1f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39f173e3",
+   "id": "04dd4542",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,19 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beea743d",
+   "id": "d4cb1707",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")"
+    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"inner\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14be8ef6",
+   "id": "5c1391cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "    all_city_weather = all_city_weather.join(\n",
     "        city_weather_raw.rename(lambda x: x if x == \"time\" else x + city_name),\n",
     "        on=\"time\",\n",
-    "        how=\"left\",\n",
+    "        how=\"inner\",\n",
     "    )\n",
     "\n",
     "all_city_weather"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3b1a8d",
+   "id": "dc1daeef",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d95fa4c",
+   "id": "db844138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d2eb53",
+   "id": "202c7c57",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499bab5b",
+   "id": "6ceb7a58",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b8f20e",
+   "id": "5c86fa15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "040b1ffe",
+   "id": "083399d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +329,7 @@
     "    )\n",
     "    .drop([\"Time (UTC)\"])\n",
     "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
+    "    .filter(pl.col(\"time\").dt.minute().eq(0))\n",
     "    .select([\"time\", \"load_mw\"])\n",
     ")\n",
     "electricity"
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4c6f1c",
+   "id": "66fbe302",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -345,17 +346,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68335098",
+   "id": "87873c2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.join(electricity, on=\"time\", how=\"left\")"
+    "time.join(electricity, on=\"time\", how=\"inner\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be15606f",
+   "id": "8632a7cb",
    "metadata": {},
    "outputs": [],
    "source": []
