--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49f0a38c",
+   "id": "eb635a40",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba9fa14",
+   "id": "15ac4d16",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b2a122",
+   "id": "6db53241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29282d2",
+   "id": "451603c4",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a165609f",
+   "id": "a375fafe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27b6a41",
+   "id": "9248495c",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9429231",
+   "id": "e532bc00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96ee4807",
+   "id": "509891a8",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319b5ea3",
+   "id": "86916232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56eb1524",
+   "id": "bf28ffcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6322832f",
+   "id": "550700b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c96336f",
+   "id": "65178fec",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,19 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fef701d",
+   "id": "81ece8db",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"left\")"
+    "time.join(all_city_weather_raw[\"brest\"], on=\"time\", how=\"inner\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c18bb4d",
+   "id": "1c8408ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "    all_city_weather = all_city_weather.join(\n",
     "        city_weather_raw.rename(lambda x: x if x == \"time\" else x + city_name),\n",
     "        on=\"time\",\n",
-    "        how=\"left\",\n",
+    "        how=\"inner\",\n",
     "    )\n",
     "\n",
     "all_city_weather"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31551d3b",
+   "id": "a20c3867",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1fdb9c0",
+   "id": "7e76e72f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c285055",
+   "id": "08c1141e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0d44ac7",
+   "id": "ee994fd3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72311ed2",
+   "id": "e1333435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e7e37d",
+   "id": "050b9fc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +329,7 @@
     "    )\n",
     "    .drop([\"Time (UTC)\"])\n",
     "    .rename({\"Actual Total Load [MW] - BZN|FR\": \"load_mw\"})\n",
+    "    .filter(pl.col(\"time\").dt.minute().eq(0))\n",
     "    .select([\"time\", \"load_mw\"])\n",
     ")\n",
     "electricity"
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c329c893",
+   "id": "140b0347",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -345,17 +346,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25fe7fc8",
+   "id": "57fd5b8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.join(electricity, on=\"time\", how=\"left\")"
+    "time.join(electricity, on=\"time\", how=\"inner\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fcb72a6",
+   "id": "aa737ecc",
    "metadata": {},
    "outputs": [],
    "source": []
