[ci skip] Fix linting d02c9ff9497e94b4d304acf187b66f7d39d78aa1

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8728ce2",
+   "id": "e56d9bc5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "661d0ea6",
+   "id": "88d4942e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,24 +32,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a99e45",
-   "metadata": {},
+   "id": "842d19a8",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# The following 3 imports are only needed to workaround some limitations\n",
     "# when using polars in a pyodide/jupyterlite notebook.\n",
-    "import tzdata\n",
+    "import tzdata  # noqa: F401\n",
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
     "import polars as pl\n",
     "import skrub\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import holidays"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e6dadd4",
+   "id": "c34d2c30",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32cf866",
+   "id": "31c5bbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c0b5ea",
+   "id": "dd41ae87",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f200f31",
+   "id": "398a6f24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de78f69d",
+   "id": "b2f55611",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bbf1669",
+   "id": "4796507d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc23d22f",
+   "id": "fd62e566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef63aaaa",
+   "id": "3c9e6ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fba21c2",
+   "id": "1225ebfc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08be00b",
+   "id": "258cbea0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff88ef6",
+   "id": "337e0147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d973ce",
+   "id": "de683df6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,12 +241,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ada5ed9",
+   "id": "2fe20d93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import holidays\n",
-    "\n",
     "holidays_fr = holidays.France(years=range(2019, 2026))\n",
     "\n",
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b2ae650",
+   "id": "e3a0dc41",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -274,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd0deab9",
+   "id": "adcf3d19",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45db0dbc",
+   "id": "ed189e7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a53e72d",
+   "id": "3f239af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a116d0ee",
+   "id": "249e47f4",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -346,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c1f0c0",
+   "id": "503de84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9940f092",
+   "id": "ab780cd1",
    "metadata": {},
    "outputs": [],
    "source": []
