--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1bf3872d",
+   "id": "0d43f502",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff430106",
+   "id": "c30d337e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,24 +32,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "860edd51",
-   "metadata": {},
+   "id": "4c0eec09",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# The following 3 imports are only needed to workaround some limitations\n",
     "# when using polars in a pyodide/jupyterlite notebook.\n",
-    "import tzdata\n",
+    "import tzdata  # noqa: F401\n",
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
     "import polars as pl\n",
     "import skrub\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import holidays"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b0c3631",
+   "id": "24b17e04",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -67,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a031d62",
+   "id": "7b1a8230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96192bad",
+   "id": "20624acb",
    "metadata": {},
    "source": [
     "\n",
@@ -100,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36c81bc9",
+   "id": "ad7fc027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62722826",
+   "id": "013bd0d9",
    "metadata": {},
    "source": [
     "\n",
@@ -123,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffbe27f1",
+   "id": "01840164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed480d24",
+   "id": "f14a8b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff4bd2a",
+   "id": "b1d0cbe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a82c2578",
+   "id": "e46df990",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -187,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b532db1c",
+   "id": "4fff4285",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -199,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99459665",
+   "id": "4f8612a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "840e32bd",
+   "id": "2a8933d5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -238,12 +241,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f12e92c",
+   "id": "ca337ccf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import holidays\n",
-    "\n",
     "holidays_fr = holidays.France(years=range(2019, 2026))\n",
     "\n",
     "fr_time = pl.col(\"time\").dt.convert_time_zone(\"Europe/Paris\")\n",
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7730d1b2",
+   "id": "f3555b54",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -274,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df147913",
+   "id": "ce7009df",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -291,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6006985b",
+   "id": "4b0cc4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b6f59e8",
+   "id": "22e05edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c5f44e",
+   "id": "990eabbc",
    "metadata": {},
    "source": [
     "Check that the number of rows matches our expectations based on the number of hours that separate the first and the last dates:"
@@ -346,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d56374",
+   "id": "8a61c3e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f135bd61",
+   "id": "97e2533e",
    "metadata": {},
    "outputs": [],
    "source": []
