[ci skip] Add some missing headers 39fae19b227e646e3a6afb977548854c44ad0a79

--- a/_sources/content/notebooks/fetch_weather_data.ipynb
+++ b/_sources/content/notebooks/fetch_weather_data.ipynb
@@ -3,17 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba88a0cf",
+   "id": "b3add775",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # %% [markdown]\n",
+    "# # Historical weather data download from open-meteo.com\n",
+    "# \n",
+    "# This notebook downloads historical weather data for 10 medium to large urban\n",
+    "# areas in France from the Open Meteo Historical Forecast API. The data is\n",
+    "# saved in a Parquet file in the `datasets` folder.\n",
+    "#\n",
+    "# Since calling the API is slow and can reach rate limits quite easily with\n",
+    "# free accounts, we use a cache to avoid downloading the same data multiple\n",
+    "# times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07208a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Extra dependencies when running this notebook in JupyterLite/Pyodide.\n",
     "%pip install -q openmeteo-requests retry-requests requests-cache ipyleaflet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1bf23a",
+   "id": "dd434ad5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3be733b",
+   "id": "1d88b1dc",
    "metadata": {},
    "source": [
     "\n",
@@ -43,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dce4410",
+   "id": "956d58e7",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028e5aed",
+   "id": "940fd190",
    "metadata": {},
    "source": [
     "\n",
@@ -84,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ac672d",
+   "id": "e5a22637",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95799656",
+   "id": "ed2a48a3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -160,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e281a75b",
+   "id": "72ca4840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed05b54",
+   "id": "178573f9",
    "metadata": {},
    "outputs": [],
    "source": []
