--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -3,7 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd5c9fa",
+   "id": "654f041a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # %% [markdown]\n",
+    "# # Direct vs Recursive Forecasting\n",
+    "#\n",
+    "# The purpose of this notebook is to compare the performance of direct\n",
+    "# forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
+    "# forecasting means that we train a family of model to predict the target value\n",
+    "# at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
+    "# Recursive forecasting means that we train a single model to predict the\n",
+    "# target value at the next time step, and then use the model recursively to\n",
+    "# predict the next time step using the previous predictions as input features.\n",
+    "# Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
+    "# we use the `MLForecast` library to handle this for us.\n",
+    "#\n",
+    "# The objective is to show that recursive forecasting can be more efficient in\n",
+    "# terms of memory usage and training time. However, it can also lead to a loss\n",
+    "# of accuracy because recursive calls are fed with previous predictions that do\n",
+    "# not necessarily match the training distribution of the model, and can\n",
+    "# therefore lead to degenerate predictions, in particular when the variance of\n",
+    "# the lagged values is informative.\n",
+    "#\n",
+    "# We highlight this issue with a synthetic dataset that has two types of\n",
+    "# segments:\n",
+    "#\n",
+    "# - Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
+    "#   suffix centered around 1.\n",
+    "# - Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
+    "#   suffix centered around -1.\n",
+    "#\n",
+    "# Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
+    "# possible to forecast beyond the length of the segments. However, it should be\n",
+    "# quite easy to predict the end of a segment given the prefix of the segment\n",
+    "# with lagged feature engineering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43cf121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a58dd32",
+   "id": "28789642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f816036",
+   "id": "37d9a159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "954525d7",
+   "id": "2d956f0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24c813d9",
+   "id": "6d47769e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -194,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98ad81d",
+   "id": "ae6d5212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "455a42d7",
+   "id": "871253dc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -228,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13997e0",
+   "id": "20db1809",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -252,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "724a5b96",
+   "id": "a3523b81",
    "metadata": {},
    "outputs": [],
    "source": []
