--- a/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -3,7 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2125ad44",
+   "id": "f7e3fc1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # %% [markdown]\n",
+    "# # Direct vs Recursive Forecasting\n",
+    "#\n",
+    "# The purpose of this notebook is to compare the performance of direct\n",
+    "# forecasting and recursive forecasting using the `MLForecast` library. Direct\n",
+    "# forecasting means that we train a family of model to predict the target value\n",
+    "# at various horizons in the future, e.g. 1 hour, 2 hours, ..., 24 hours ahead.\n",
+    "# Recursive forecasting means that we train a single model to predict the\n",
+    "# target value at the next time step, and then use the model recursively to\n",
+    "# predict the next time step using the previous predictions as input features.\n",
+    "# Implementing recursive forecasting is a bit cumbersome to do manually, hence\n",
+    "# we use the `MLForecast` library to handle this for us.\n",
+    "#\n",
+    "# The objective is to show that recursive forecasting can be more efficient in\n",
+    "# terms of memory usage and training time. However, it can also lead to a loss\n",
+    "# of accuracy because recursive calls are fed with previous predictions that do\n",
+    "# not necessarily match the training distribution of the model, and can\n",
+    "# therefore lead to degenerate predictions, in particular when the variance of\n",
+    "# the lagged values is informative.\n",
+    "#\n",
+    "# We highlight this issue with a synthetic dataset that has two types of\n",
+    "# segments:\n",
+    "#\n",
+    "# - Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
+    "#   suffix centered around 1.\n",
+    "# - Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
+    "#   suffix centered around -1.\n",
+    "#\n",
+    "# Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
+    "# possible to forecast beyond the length of the segments. However, it should be\n",
+    "# quite easy to predict the end of a segment given the prefix of the segment\n",
+    "# with lagged feature engineering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de241f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c8926eb",
+   "id": "d39650b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa207f23",
+   "id": "c937c8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aadd2cec",
+   "id": "56636a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c824b7cc",
+   "id": "1859df67",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -194,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9738be",
+   "id": "3bd92c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0584a049",
+   "id": "bf22522e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -228,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad649c6",
+   "id": "6779707f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -252,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542c2b12",
+   "id": "75eea9e5",
    "metadata": {},
    "outputs": [],
    "source": []
