--- a/jupyterlite/files/notebooks/fetch_weather_data.ipynb
+++ b/jupyterlite/files/notebooks/fetch_weather_data.ipynb
@@ -3,17 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3edd58f2",
+   "id": "ac34a431",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # %% [markdown]\n",
+    "# # Historical weather data download from open-meteo.com\n",
+    "# \n",
+    "# This notebook downloads historical weather data for 10 medium to large urban\n",
+    "# areas in France from the Open Meteo Historical Forecast API. The data is\n",
+    "# saved in a Parquet file in the `datasets` folder.\n",
+    "#\n",
+    "# Since calling the API is slow and can reach rate limits quite easily with\n",
+    "# free accounts, we use a cache to avoid downloading the same data multiple\n",
+    "# times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4c2ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Extra dependencies when running this notebook in JupyterLite/Pyodide.\n",
     "%pip install -q openmeteo-requests retry-requests requests-cache ipyleaflet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d476aa27",
+   "id": "d6376b8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eccdebc",
+   "id": "bbe37ac7",
    "metadata": {},
    "source": [
     "\n",
@@ -43,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb87833",
+   "id": "a53f4f14",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9450755",
+   "id": "859bd7b8",
    "metadata": {},
    "source": [
     "\n",
@@ -84,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0c3de8",
+   "id": "c1b202ef",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0547c879",
+   "id": "0d9811a6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -160,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17866d79",
+   "id": "9bd19057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72549fca",
+   "id": "e3e4ad31",
    "metadata": {},
    "outputs": [],
    "source": []
